exception 코드 추가 및 service 코드 수정